--- a/style.css
+++ b/style.css
@@ -669,7 +669,6 @@ Start of Section 3
 }
 
 .section-6-top {
-  width: 100%;
   height: 100;
   display: flex;
   flex-direction: column;
@@ -682,7 +681,6 @@ Start of Section 3
 
 .section-6-bottom {
   background: white;
-  width: 100%;
   height: 100%;
 }
 
@@ -1013,6 +1011,7 @@ Start of Section 3
   font-size: 4rem;
   font-weight: 800;
   line-height: 5rem;
+  overflow-y: hidden;
 }
 
 .section-7-p {
